and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

October 29, 2014 G.Cosmo                   geommng-V10-00-05
- Moved G4USolid bridge class from internal USolids module.

October 3, 2014 G.Cosmo                    geommng-V10-00-04
- Moved constructor for partial voxels refinements from protected to public.

September 25, 2014 W. Pokorski             geommng-V10-00-03
- Some fixes in the default constructor for Root-I/O persistency.

July 11, 2014 A. Dotti			   geommng-V10-00-02
- Solves possible data-race condition in G4GeaomSplitter.

April 10, 2014 G.Cosmo                     geommng-V10-00-01
- Get rid of deprecated 'register' storage class specifier in source files.

March 31, 2014 G.Cosmo                     geommng-V10-00-00
- Fixed operator=() signature in G4LogicalSurface.

December 2, 2013 A.Dotti                   geommng-V09-06-17
- Correctly initialize shadow pointers in G4PhysicalVolume.

December 2, 2013 M.Asai                    geommng-V09-06-16
- Correctly initialize shadow pointers in G4LogicalVolume.

November 30, 2013 M.Asai                   geommng-V09-06-15
- Explicitely initialize data members of G4LVData.

November 27, 2013 J.Apostolakis            geommng-V09-06-14
- Fix in G4GeomSplitter::FreeSlave(): use free() to delete memory 
   which was allocated with malloc().

October 18, 2013, A. Dotti                 geommng-V09-06-13
- Bug fixing in G4GeomSplitter::UseWorkspace method
  check if offset pointer is assigned AND different from new value

October 3, 2013 J.Apostolakis              geommng-V09-06-12
- Cleanup of G4LogicalVolume, G4VPhysicalVolume
     Moved long description of helper classes to end of headers.
     Moved macros to icc file. 