@@ -17,6 +17,9 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+November 27, 2014 G.Cosmo                  geommng-V10-00-06
+- Fixed implementation of StreamInfo() for G4USolid.
+
 October 29, 2014 G.Cosmo                   geommng-V10-00-05
 - Moved G4USolid bridge class from internal USolids module.
 
